--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <table cellspacing="20">
       <tr>
-        <td><img src="https://profile-images.xing.com/images/b3c0ed4a9088ba714803d481d67a248d-4/omid-fatemian.256x256.jpg" alt="Omid Fatemian Profile Picture"></td>
+        <td><img src="Circle image.png" alt="Omid Fatemian Profile Picture"></td>
         <td><h1>Omid Fatemian</h1>
         <p><em>Project Manager at <strong><a href="https://www.aradhco.com/">Aradhco</a/strong></em></p>
         <p>I am also Python and Web Developer. I can work with teams and alone perfectly.</p></td>
