--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     </head>
     <body>
     <div class="top-container">
-        <img class= "top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class= "top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Omid.</h1>
         <p><h2>a programmer.</h2></p>
-        <img class= "bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img class= "mountain-img" src="Images\horizental - Copy.jpg" alt="mountain-img">
+        <img class= "bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img class= "mountain-img" src="horizental - Copy.jpg" alt="mountain-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="Images\Omid.png" alt="">
+          <img src="Omid.png" alt="">
           <h2>Hello.</h2>
           <p class="intro">I develop websites, web apps, and data science projects, using my experience in Coding, Designing, Project management and Business Analysis.</p>
         </div>
@@ -27,12 +27,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="coding-img" src="Images\webapp - Copy.jpg" alt="">
+            <img class="coding-img" src="webapp - Copy.jpg" alt="">
             <h3>Design and Development</h3>
             <p class="code-skill-description">I Develop effieciently with most practical libraries on Python like Numpy, Pandas, Matplotlib, and others, and also using Adobe XD, Html, Css for User experience and User interface designing. </p>
           </div>
           <div class="skill-row">
-            <img class="skill-img" src="Images\management-web.jpg" alt="">
+            <img class="skill-img" src="management-web.jpg" alt="">
             <h3>Project Management and Business Anlaysis</h3>
             <p class="project-business-description">with more than 10 years of experience, I use more than 100 tools and techniques in project management and 80 in Business Analysis for the best results in the projects.</p>
           </div>
