--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
     <div class="top-container">
-        <img class= "top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class= "top-cloud" src="images/cloud.png" alt="">
         <h1>I'm Omid.</h1>
         <p><h2>a programmer.</h2></p>
-        <img class= "bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class= "bottom-cloud" src="images/cloud.png" alt="">
         <img class= "mountain-img" src="Images\horizental - Copy.jpg" alt="mountain-img">
     </div>
     <div class="middle-container">
