--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>I will be glad to here about your projects and work with you</h3>
-          <p class="contact-message">feel free to send me, your contact details. I am goingt to have a meeting or conversation with you, and recomend my solutions</p>
+          <p class="contact-message">feel free to send me, your contact details. I am going to have a meeting or conversation with you, and recomend my solutions</p>
           <a class="btn" href="mailto:omid.fatemian@gmail.com">CONTACT ME</a>
         </div>
       </div>
